Fixed AllBlogPost endpoint to show the newest blog posts first.